Configured and ready to go

--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,15 @@
 name    = DDGC-Static
 author  = Torsten Raudssus <torsten@raudss.us>
 license = Perl_5
-copyright_holder = Torsten Raudssus
+copyright_holder = DuckDuckGo
 copyright_year   = 2013
 
 [@Author::GETTY]
+no_cpan = 1
+duckpan = 1
 
 [Prereqs]
+File::ShareDir = 0
 
 [Prereqs / TestRequires]
-Test::More = 0.98
-Test::LoadAllModules = 0.021
+Test::More = 0
