css/img/fonts added

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,11 @@ no_cpan = 1
 duckpan = 1
 no_travis = 1
 
+[@Author::SDOUGBROWN]
+no_cpan = 1
+duckpan = 1
+no_travis = 1
+
 [Prereqs]
 File::ShareDir = 0
 
