i'm kind of dumb

--- a/dist.ini
+++ b/dist.ini
@@ -1,15 +1,11 @@
 name    = DDGC-Static
 author  = Torsten Raudssus <torsten@raudss.us>
+author	= Doug Brown <doug@douggo.com>
 license = Perl_5
 copyright_holder = DuckDuckGo
 copyright_year   = 2013
 
 [@Author::GETTY]
-no_cpan = 1
-duckpan = 1
-no_travis = 1
-
-[@Author::SDOUGBROWN]
 no_cpan = 1
 duckpan = 1
 no_travis = 1
